@@ -60,6 +60,7 @@ fixed bugs:
 - fixed bug in the output of solutions with priced variables
 - fixed bug in propagation with parameters prop_maxrounds and prop_maxroundsroot
 - removed wrong assertion in varAddImplic()
+- conflict analysis can now handle errors in LP solving calls
 
 
 SCIP version 0.79
